force-app/main/default/objects/Non_Validated_Address__c/Non_Validated_Address__c.object-meta.xml
<CustomObject>
    <description>Captures the addresses coming from KARZAA whose Pincode is not present in the Active Pincode Directory</description>
    <label>Non Validated Address</label>
    <nameField>
        <label>Non Validated Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Validated Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>