force-app/main/default/objects/Non_Validated_Address__c/fields/Active_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Active_Pincode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Pincode</label>
    <type>Checkbox</type>
</CustomField>