force-app/main/default/objects/Non_Validated_Address__c/fields/Addressline1__c.field-meta.xml
<CustomField>
    <fullName>Addressline1__c</fullName>
    <label>Addressline1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>