force-app/main/default/objects/Non_Validated_Address__c/fields/Addressline2__c.field-meta.xml
<CustomField>
    <fullName>Addressline2__c</fullName>
    <label>Addressline2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>