force-app/main/default/objects/Non_Validated_Address__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>