force-app/main/default/objects/Non_Validated_Address__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <label>GSTIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>