force-app/main/default/objects/Non_Validated_Address__c/fields/Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name__c</fullName>
    <label>Trade Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>